[package]
name = "keypost-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hmac = "^0.11"
opaque-ke = "^0.5"
# pbkdf2 = "^0.8"
rand = "^0.8"
rocket = "^0.4"
rocket_contrib = { version = "^0.4", features = ["json"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
# yubihsm = "^0.38"
