[package]
name = "keypost-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.13"
curve25519-dalek = { version = "^3.1", default-features = false, features = ["std"] }
diesel = { version = "^1.4", default-features = false, features = ["postgres"] }
diesel_cli = { version = "^1.4", default-features = false, features = ["postgres"] }
# diesel_migrations = "^1.4"
dotenv = "^0.15"
# hmac = "^0.11"
lazy_static = "^1.4"
opaque-ke = "^0.6"
# pbkdf2 = "^0.8"
pkce = "^0.1"
rand = "^0.8"
rocket = "^0.4"
rocket_contrib = { version = "^0.4", features = ["json"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
sha2 = "^0.9"
# yubihsm = "^0.38"
